reunião, catalogo, atividades

--- a/apresentacao/index.html
+++ b/apresentacao/index.html
@@ -231,11 +231,34 @@
 
     <div id="projeto" class="step" data-x="6700" data-y="-300" data-scale="6">
         <p>O  projeto  <b class="imagination">Veículos</b> foi  concebido  com  o objetivo de controlar as solicitações de veículos e as viagens realizadas, promovendo uma melhor gestão da frota do TRE-PB bem como possibilitar a realização de auditorias</p>
+
+        <div class="notes">
+            <p>
+                O gestor lotado na SETRAN, possui um perfil de administrador e em sua tela recebe assolicita ̧c ̃oes de todos os servidores e membros. Com a vis ̃ao de todas as solicita ̧c ̃oes o gestortem a possibilidade de analisar passageiros que ir ̃ao para os mesmos destinos, ou at ́e mesmona rota, com hor ́arios similares e montar as viagens adequando a disponibilidade de motoristase ve ́ıculos.
+            </p>
+        </div>
+
     </div>
 
-    <div id="source" class="step" data-x="6300" data-y="3000" data-z="3000" data-rotate="20" data-scale="1">
-        <p>want to know more?</p>
-        <q><a href="http://github.com/impress/impress.js">use the source</a>, Luke!</q>
+    <div id="reuniao" class="step" data-x="6300" data-y="3000" data-z="3000" data-rotate="20" data-scale="1">
+        <div class="notes">
+            <p>PORTARIA DIRETORIA-GERAL Nº 37/2017 TRE-PB/PTRE/DG - artigo 3º</p>
+            <ul>
+                <li>
+                    $$2 início do processo para demandas de novos sistemas oumanutenções de grande porte deve ser autorizado pelo Comitê Gestor (COGES)
+                </li>
+                <li>
+                    $$1 início do processo para demandas de manutenção de pequenoporte pode ser autorizado pela Coordenadoria de Sistemas (COSIS)
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div id="catalogo" class="step" data-x="7600" data-y="3000" data-z="4000" data-rotate="20" data-scale="1">
+
+    </div>
+
+    <div id="atividade" class="step" data-x="8900" data-y="3000" data-z="5000" data-rotate="20" data-scale="1">
+        
     </div>
 
     <div id="one-more-thing" class="step" data-x="6000" data-y="4000" data-scale="2">
