ObjetivosGerais: ajuste no posicionamento

--- a/apresentacao/index.html
+++ b/apresentacao/index.html
@@ -128,7 +128,7 @@
         <!-- Step adicionado apenas para parar o autoplay do step anterior -->
     </div>
 
-    <div id="objetivoGeral" class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="1">
+    <div id="objetivoGeral" class="step" data-x="3500" data-y="2100" data-z="-2000" data-rotate="180" data-scale="1">
         <h4>Objetivo geral:</h4>
         <p>
             Ativos: soluções <span>web</span> desenvolvidas pela <b>SEDES</b>.
