--- a/apresentacao/index.html
+++ b/apresentacao/index.html
@@ -258,7 +258,7 @@
 
     </div>
 
-    <div id="atividade" class="step" data-x="8900" data-y="3000" data-z="5000" data-rotate="20" data-scale="1">
+    <div id="planejamento" class="step" data-x="8900" data-y="3000" data-z="5000" data-rotate="20" data-scale="1">
         
     </div>
 
