--- a/apresentacao/index.html
+++ b/apresentacao/index.html
@@ -504,7 +504,8 @@
         </code></pre>
     </div>
 
-    <div id="ireports"   class="step" data-x="11020" data-y="3430" data-z="6550" data-rotate-x="270"  data-scale="1" >
+    <div id="daily" class="step" data-x="14020" data-y="1630" data-z="7550" data-rotate-x="180" data-scale="1" >
+        <img src="./imagens/daily.jpeg" alt="" style="min-width: auto;">
     </div>
 
     <div id="one-more-thing" class="step" data-x="6000" data-y="4000" data-scale="2">
