--- a/apresentacao/index.html
+++ b/apresentacao/index.html
@@ -508,8 +508,10 @@
         <img src="./imagens/daily.jpeg" alt="" style="min-width: auto;">
     </div>
 
-    <div id="one-more-thing" class="step" data-x="6000" data-y="4000" data-scale="2">
-        <p>one more thing...</p>
+    
+
+    <div id="resultado" class="step" data-x="6000" data-y="7000" data-scale="8">
+        <h2>Resultados...</h2>
     </div>
 
     <!--
@@ -524,9 +526,27 @@
         as `data-rotate` (these two are basically aliases).
         
     -->
-    <div id="its-in-3d" class="step" data-x="6200" data-y="4300" data-z="-100" data-rotate-x="-40" data-rotate-y="10" data-scale="2">
-        <p><span class="have">have</span> <span class="you">you</span> <span class="noticed">noticed</span> <span class="its">it’s</span> <span class="in">in</span> <b>3D<sup>*</sup></b>?</p>
-        <span class="footnote">* beat that, prezi ;)</span>
+    <div id="resultados" class="step resultados" data-x="6200" data-y="4300" data-z="-100" data-rotate-x="-40" data-rotate-y="10" data-scale="2">
+        <p>O sistema passou a ser utilizado em sua plenitude, com a versão <b>1.1.0</b>, a partir de agosto de 2017. Em
+            <b>2018</b> terminou o ano sendo o 4º sistema mais usado em todo o TRE com <b>23.375</b> transações. </p>
+    </div>
+    <div id="ranking2018" class="step" data-x="6200" data-y="5500" data-z="-100" data-rotate-x="-40" data-rotate-y="10" data-scale="2">
+        <img src="../dados/figuras/ranking2018.png" alt=""> 
+    </div>
+    <div id="ranking2019" class="step resultados" data-x="6200" data-y="7200" data-z="-100" data-rotate-x="-40" data-rotate-y="10" data-scale="2">
+        <p>até março de <b>2019</b> foram registradas <b>4.006</b> transações, já sendo o <b>3º</b>
+            sistema mais utilizado.</p>
+        <img src="../dados/figuras/ranking2019.png" alt="">
+    </div>
+    <div id="frase" class="step resultados" data-x="2000" data-y="1000" data-z="-10000" data-rotate="90" data-scale="1">
+        <p>Saio satisfeito dessa jornada.</p>
+        <p> Tratando-se de <b>tecnologias</b>, muito ainda é pouco. Tudo que aprendi
+            serve apenas como base para minha carreira de <b>desenvolvedor</b>. Conquistei apenas a
+            ponta do iceberg... ainda falta muito a aprender e evoluir.</p>
+    </div>
+    <div id="agradecimentos" class="step" data-x="2000" data-y="1000" data-z="-10000" data-rotate-y="90" data-scale="1">
+        <h3>Gratidão!</h3>
+        <img src="./imagens/gratidao.png" alt="">
     </div>
 
     <!--
